1. sd_chunker.clp: 	Modified: print_chunk 2. Browser/src/style.css: 	Added colour for Inf_VP and 	Modified colour for VP 3. Updated following files to handle syntax errors: 	dependency_parse.l	derivation_parse.l 4. Modified following shell files to display halted errors: 	run_alignment.sh	run_sentence_ace.sh	run_sentence_link.sh 	run_sentence_logon.sh	run_sentence_ol.sh	run_sentence_stanford.sh 	run_sentence_stanford_align_man.sh		run_sentence_stanford_minion.sh 5. this1.py: 	Fixed bug to handle displaying of tam file info 6. Updated Log.

--- a/Browser/src/style.css
+++ b/Browser/src/style.css
@@ -19,7 +19,7 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
 td.number	{ background-color: lightgreen;				} 
 td.NP		{ background-color: rgb(152,245,255); /*cadetblue*/	}
-td.VP		{ background-color: rgb(255,182,193); /*lightpink*/	}
+td.VP		{ background-color: rgb(250,165,193); /*carnationpink (Note: Original VP color code: rgb(255,182,193); lightpink. To give light pink color to Infinitive VP, modified this color by Roja(05-05-16))*/  }
 td.ADJP		{ background-color: rgb(255,236,139); /*lightgolden*/	}
 td.ADVP		{ background-color: rgb(127,255,212); /*aquamarine*/	}
 td.PP		{ background-color: rgb(255,218,185); /*peach*/		}
@@ -32,6 +32,7 @@ td.UCP		{ background-color: rgb(173,216,230); /*lightblue*/	}
 td.LST		{ background-color: rgb(240,255,240); /*honeydew*/	}
 td.REP		{ background-color: rgb(192,192,192); /*Light gray*/	}
 /* REP: previous phrase is repeated; to distinguish the two phrases, second one is marked with Light gray*/
+td.Inf_VP	{ background-color: rgb(255,190,193); /*Azalea Pink Added by Roja(05-05-16)*/	}
 
 td.number
 {
